para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/02.AMZ
void main() {
		int a = 10;
		int b = 2;

		switch (a) {
			/* syntatic error */
			case 2 {
				print("Dois");

			}
			/* syntatic error */
			case 10 {
				while (b < 5) {
					b = b + 1;
				}

			}
			default {
				print (a % b);
			}
		}
}
